@@ -13,11 +13,28 @@ buildscript{
         google()
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven{ url 'https://jitpack.io' }
+
+        //fake repository to download my patched robovm jar from
+        ivy{
+            url 'https://github.com/'
+
+            patternLayout {
+                artifact '/[organisation]/[module]/raw/a-single-jar-file/[revision].jar'
+            }
+
+            // This is required in Gradle 6.0+ as metadata file (ivy.xml)
+            // is mandatory. Docs linked below this code section
+            metadataSources { artifact() }
+        }
     }
 
     dependencies{
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
-        classpath "com.github.anuken:packr:-SNAPSHOT"
+        //use local, patched robovm gradle plugin until my PR for gradle 7.0 support is merged
+        //https://github.com/Anuken/robovm/raw/a-single-jar-file/robovm-gradle-plugin-2.3.14-SNAPSHOT.jar
+        classpath "Anuken:robovm:robovm-gradle-plugin-2.3.14-SNAPSHOT"
+        //needed for plugin above
+        classpath "com.mobidevelop.robovm:robovm-dist-compiler:2.3.13"
+
         classpath "com.github.Anuken.Arc:packer:$arcHash"
         classpath "com.github.Anuken.Arc:arc-core:$arcHash"
     }
@@ -36,11 +53,11 @@ allprojects{
 
     ext{
         versionNumber = '7'
-        if(!project.hasProperty("versionModifier")) versionModifier = 'dev'
+        if(!project.hasProperty("versionModifier")) versionModifier = 'pre-alpha'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
         steamworksVersion = '0b86023401880bb5e586bc404bedbaae9b1f1c94'
-        rhinoVersion = '099aed6c82f8094b3ba39a273b8d2ba7bdcc6443'
+        rhinoVersion = '55bf0dac1cfa7770672fd26112512c733ca9d5dc'
 
         loadVersionProps = {
             return new Properties().with{p -> p.load(file('../core/assets/version.properties').newReader()); return p }
@@ -197,12 +214,7 @@ allprojects{
 
     tasks.withType(JavaCompile){
         targetCompatibility = 8
-        //TODO fix dynamically, this is a hack
-        if(System.getProperty("user.name") == "anuke"){
-            sourceCompatibility = JavaVersion.VERSION_15
-        }else{
-            sourceCompatibility = JavaVersion.VERSION_14
-        }
+        sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
         dependsOn clearCache
@@ -225,18 +237,13 @@ configure(project(":annotations")){
 //compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")){
     tasks.withType(JavaCompile){
-        options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-
-        doFirst{
-            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
-        }
+        options.compilerArgs.addAll(['--release', '8'])
     }
 
     tasks.withType(Javadoc){
         options{
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '14')
+            addStringOption('-release', '16')
         }
     }
 }
@@ -303,9 +310,8 @@ project(":core"){
 
     kapt{
         javacOptions{
-            option("-source", "14")
+            option("-source", "16")
             option("-target", "1.8")
-            option("--enable-preview")
         }
     }
 
@@ -431,6 +437,8 @@ project(":tests"){
     }
 
     test{
+        //fork every test so mods don't interact with each other
+        forkEvery = 1
         useJUnitPlatform()
         workingDir = new File("../core/assets")
         testLogging{
@@ -493,8 +501,10 @@ task deployAll{
     dependsOn "desktop:packrWindows64"
     dependsOn "desktop:packrWindows32"
     dependsOn "desktop:packrMacOS"
-    dependsOn "server:deploy"
-    dependsOn "android:deploy"
+    if(versionModifier != "steam"){
+        dependsOn "server:deploy"
+        dependsOn "android:deploy"
+    }
 }
 
 task resolveDependencies{
